--- a/View/chat.html
+++ b/View/chat.html
@@ -37,7 +37,7 @@
                 <button type="submit" class="chat__button">
                     <span class="material-symbols-outlined">send</span>
                 </button></div>
-                <div id="nada"><button class="finalizar">Finzalizar</button></div>
+                <div id="nada"><button class="finalizar">Finalizar</button></div>
             </form>
             </section>
 
